fix footer on mobile

--- a/template/jadi/css/style.css
+++ b/template/jadi/css/style.css
@@ -525,7 +525,7 @@ header .navbar .btn {
 }
 
 .footer .box-container .box{
-    flex:1 1 25rem;
+    flex:1 1 14rem;
     margin:2rem;
 }
 
